--- a/package.json
+++ b/package.json
@@ -22,11 +22,12 @@
   "homepage": "https://github.com/Dadidam/gladiator#readme",
   "dependencies": {
     "react": "^15.2.1",
+    "react-bootstrap": "^0.30.0",
     "react-dom": "^15.2.1"
   },
   "devDependencies": {
     "babel": "^6.5.2",
-	"babel-loader": "^6.2.4",
+	  "babel-loader": "^6.2.4",
     "babel-core": "^6.11.4",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.11.1",
