--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "less-loader": "^4.0.3",
     "postcss": "^5.2.16",
     "style-loader": "^0.16.1",
+    "url-loader": "^0.5.8",
     "webpack": "^1.13.1",
     "webpack-dev-server": "^1.14.1"
   }
