--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Just a game",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server"
+    "start": "webpack-dev-server",
+    "build": "webpack"
   },
   "repository": {
     "type": "git",
@@ -26,24 +27,25 @@
     "mobx": "^3.1.9",
     "mobx-react": "^4.1.8",
     "react": "^15.5.4",
-    "react-bootstrap": "^0.30.0",
     "react-dom": "^15.2.1"
   },
   "devDependencies": {
     "babel": "^6.5.2",
     "babel-core": "^6.11.4",
-    "babel-loader": "^6.2.4",
+    "babel-loader": "^7.1.0",
     "babel-plugin-import": "^1.1.1",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.11.1",
     "babel-preset-stage-2": "^6.18.0",
-    "css-loader": "^0.28.0",
-    "less-loader": "^4.0.3",
+    "css-loader": "^0.28.4",
+    "extract-text-webpack-plugin": "^2.1.2",
+    "html-webpack-plugin": "^2.28.0",
+    "less-loader": "^4.0.4",
     "postcss": "^5.2.16",
-    "style-loader": "^0.16.1",
-    "url-loader": "^0.5.8",
-    "webpack": "^1.13.1",
-    "webpack-dev-server": "^1.14.1"
+    "style-loader": "^0.18.2",
+    "url-loader": "^0.5.9",
+    "webpack": "^3.0.0",
+    "webpack-dev-server": "^2.5.0"
   }
 }
