--- a/package.json
+++ b/package.json
@@ -22,12 +22,17 @@
   "homepage": "https://github.com/Dadidam/gladiator#readme",
   "dependencies": {
     "antd": "^2.8.3",
+    "immutable": "^3.8.1",
     "less": "^2.7.2",
     "mobx": "^3.1.9",
     "mobx-react": "^4.1.8",
     "react": "^15.5.4",
     "react-bootstrap": "^0.30.0",
-    "react-dom": "^15.2.1"
+    "react-dom": "^15.2.1",
+    "react-redux": "^5.0.5",
+    "redux": "^3.7.1",
+    "redux-immutable": "^4.0.0",
+    "remote-redux-devtools": "^0.5.12"
   },
   "devDependencies": {
     "babel": "^6.5.2",
