--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "antd": "^2.13.4",
     "immutable": "^3.8.1",
     "less": "^2.7.2",
+    "lodash": "^4.17.11",
     "mobx": "^3.1.9",
     "mobx-react": "^4.1.8",
     "react": "^15.5.4",
